<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/movies" />

    <item
        android:id="@+id/navigation_tvShow"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/tvshows" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites"/>

</menu>